fixed showing top content-section in the Promo page of the widget TMV and correction vertical align of tips of the slider in this page

--- a/assets/themes/twitter/css/style.less
+++ b/assets/themes/twitter/css/style.less
@@ -960,6 +960,7 @@ a.blueLink {
   p.small-paragraph {
     float: right;
     width: 60%;
+    margin: 50px 0 133px;
     text-align: right;
   }
 
@@ -1157,7 +1158,7 @@ a.blueLink {
          right:353px;
          display:none;
          max-width:226px;
-         padding: 0 86px 0 0;
+         padding: 4px 86px 0 0;
          line-height: 17px;
          background: url('../img/slider_tmv/markerLine.png') right 14px no-repeat;
 
